# HazardSystem

./: .gitignore  CMakeLists.txt  README.md  temp.cpp
.github/workflows/: macos_arm.yml  macos_x86_64.yml  ubuntu_X86_64.yml  ubuntu_arm.yml  ubuntu_riscv.yml  windows_arm.yml  windows_x86_64.yml
benchmark/: AtomicUniquePtrBenchmark.cpp  AvailabilityBitmapTreeBenchmark.cpp  BitmaskTableDynamicBenchmark.cpp  BitmaskTableFixedBenchmark.cpp  CMakeLists.txt  HashSetBenchmark.cpp  HashSetFixedBenchmark.cpp  HashTableBenchmark.cpp  HazardPointerManagerDynamicBenchmark.cpp  HazardPointerManagerFixedBenchmark.cpp  HazardRegistryBenchmark.cpp  HazardThreadManagerBenchmark.cpp  ProtectedPointerBenchmark.cpp  ThreadRegistryBenchmark.cpp
example/: main.cpp
include/: AvailabilityBitmapTree.hpp  BitmapTree.hpp  BitmaskTable.hpp  HashMultiTable.hpp  HashSet.hpp  HashTable.hpp  HashTableMap.hpp  Hasher.hpp  HazardHandle.hpp  HazardPointer.hpp  HazardPointerManager.hpp  HazardRegistry.hpp  HazardThreadManager.hpp  ProtectedPointer.hpp  RetireMap.hpp  RetireSet.hpp  ThreadRegistry.hpp  atomic_unique_ptr.hpp
src/: AvailabilityBitmapTree.cpp  BitmapTree.cpp  BitmaskTable.cpp  HashMultiTable.cpp  HashSet.cpp  HashTable.cpp  HashTableMap.cpp  Hasher.cpp  HazardHandle.cpp  HazardPointer.cpp  HazardPointerManager.cpp  HazardRegistry.cpp  HazardSystemAPI.cpp  HazardThreadManager.cpp  ProtectedPointer.cpp  RetireMap.cpp  RetireSet.cpp  ThreadRegistry.cpp  atomic_unique_ptr.cpp
test/: AvailabilityBitmapTreeTest.cpp  BitmaskTableDynamicTest.cpp  BitmaskTableTest.cpp  CMakeLists.txt  HashMultiTableTest.cpp  HashSetFixedTest.cpp  HashSetTest.cpp  HashTableTest.cpp  HazardPointerManagerDynamicTest.cpp  HazardPointerManagerFixedTest.cpp  HazardPointerManagerTest.cpp  HazardPointerProtectProbe.cpp  HazardRegistryTest.cpp  HazardThreadManagerTest.cpp  ProtectedPointerTest.cpp  RetireMapTest.cpp  RetireSetTest.cpp  ThreadRegistryTest.cpp  atomic_unique_ptr_test.cpp
